--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:E2wi+cq4Kekn5QAo8PfKtIBSzAOjj6HjD875nAOtSrk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,8 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
