--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:E2wi+cq4Kekn5QAo8PfKtIBSzAOjj6HjD875nAOtSrk=
+APP_KEY=base64:ShAmkOyvzRTSzFiKpl+Hu8MCezX1wOPCxxu762xAe00=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=80
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -10,22 +11,18 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+BROADCAST_DRIVER=redis
+QUEUE_DRIVER=redis
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=redis
-REDIS_PASSWORD=null
+REDIS_PASSWORD=password
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
