--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
             - ./:/var/www/html
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         ports:
-            - "80:80"
+            - "${APP_PORT:-80}:80"
         depends_on:
             - app
         networks:
